--- a/BattleTank/.gitignore
+++ b/BattleTank/.gitignore
@@ -60,3 +60,11 @@ Intermediate/*
 
 # Cache files for the editor to use
 DerivedDataCache/*
+
+BattleTank/Content/StarterContent/
+
+### Visual Studio Generated Files ###
+*.BattleTank/BattleTank.VC.db
+*.VC.opendb
+
+
