--- a/BattleTank/Config/DefaultEngine.ini
+++ b/BattleTank/Config/DefaultEngine.ini
@@ -9,7 +9,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Levels/BattleGround.BattleGround
 GameDefaultMap=/Game/Levels/MainMenu.MainMenu
-GlobalDefaultGameMode=/Game/MyBattleTankGameMode.MyBattleTankGameMode_C
+GlobalDefaultGameMode=/Game/MyBattleTankGameMode_BP.MyBattleTankGameMode_BP_C
 
 [/Script/Engine.UserInterfaceSettings]
 RenderFocusRule=NavigationOnly
